--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ h2 {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.9);
-    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -67,6 +66,7 @@ h2 {
     max-height: 80vh;
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.5);
+    margin-top: 7%;
 }
 
 /* Botão de fechar */
